--- a/pages/admin.html
+++ b/pages/admin.html
@@ -63,32 +63,32 @@
                       <hr class="mt-4 mb-4">
                       <h3 calss="fw-bold mb-3">Custom Access</h3>
                       <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                        <label class="form-check-label align-middle" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="Lecture">
+                        <label class="form-check-label align-middle" for="Lecture">
                           Lecture
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                        <label class="form-check-label align-middle" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="Coupon">
+                        <label class="form-check-label align-middle" for="Coupon">
                           Coupon
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                        <label class="form-check-label align-middle" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="Message">
+                        <label class="form-check-label align-middle" for="Message">
                           Message
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                        <label class="form-check-label align-middle" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id="Setting">
+                        <label class="form-check-label align-middle" for="Setting">
                           Setting
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                        <label class="form-check-label align-middle" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" id=" Task Menu">
+                        <label class="form-check-label align-middle" for=" Task Menu">
                           Task Menu
                         </label>
                       </div>
@@ -116,18 +116,18 @@
         
         <%- include('./layout/main') -%>
 
-        <ul class="d-flex flex-row-reverse mt-5 me-40">
-          <li class="border border-success text-success rounded-end pt-1">
+        <ul class="d-flex justify-content-end mt-5 me-40">
+          <li class="border border-success text-success rounded-start pt-1">
             <a href="#">
               <span class="material-icons">
                 navigate_next
                 </span>
             </a>
           </li>
-          <li class="border border-success pt-1"><a href="#" class="p-2"><span>3</span></a></li>
-          <li class="border border-success pt-1"><a href="#" class="p-2"><span>2</span></a></li>
           <li class="border border-success pt-1 bg-success"><a href="#" class="p-2"><span class="text-light">1</span></a></li>
-          <li class="border border-success text-success rounded-start pt-1">
+          <li class="border border-success pt-1"><a href="#" class="p-2"><span>2</span></a></li>
+          <li class="border border-success pt-1"><a href="#" class="p-2"><span>3</span></a></li>
+          <li class="border border-success text-success  rounded-end pt-1">
             <a href="#">
               <span class="material-icons">
                 navigate_before
@@ -135,6 +135,8 @@
             </a>
           </li>
         </ul>
+
+        
 
       </div>
     </div>
